# csr_service

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.dev/: config.toml
.github/workflows/: ci.yml
config/: policy.yaml  prompts.yaml
docker/: Dockerfile  Dockerfile.core
docs/: API.md  CSR_SPEC.md  ENGINEERING_DECISIONS.md  EVALUATION.md  EXPERIMENTS.md  PATHS_FORWARD.md  RESEARCH_OVERVIEW.md  STANDARDS_AUTHORING.md  csr-spec.md
eval/: checker.py  experiment_runner.py  runner.py  visualize.py
eval/cases/: case_01_clean.json  case_02_measurable_verbs.json  case_03_accessibility.json  case_04_contradictions.json  case_05_structure.json  case_06_ambiguous.json  case_07_malformed.json  case_08_missing_set.json
eval/experiments/h1_forced_traversal/: 00_SUMMARY.md  01_RUN1_BASELINE.md  02_CHANGES.md  03_RUN2_RESULTS.md  baseline_results.json  modified_prompts.yaml  modified_results.json  modified_results_7b.json
eval/experiments/h2_single_rule/: 00_HYPOTHESIS.md  01_RESULTS.md  results.json
eval/experiments/h4_single_rule/: 00_HYPOTHESIS.md  01_RESULTS.md
src/csr_service/: __init__.py  auth.py  config.py  logging.py  main.py
src/csr_service/engine/: __init__.py  (+4 more)
standards/: naval_v3.json
tests/: conftest.py  test_auth.py  test_config.py  test_edge_cases.py  test_logging.py  test_model_client.py  test_parser.py  test_pipeline.py  test_policy.py  test_prompt.py  test_retriever.py  test_routes.py  test_schemas.py  test_standards_loader.py
(+13 files in other folders)
